# clayton-engine-v0.5-alpha

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
src/: main.cpp
src/audio/: AudioPlayer.cpp  AudioPlayer.h
src/core/: Engine.cpp
